# SentinelNet_v2.0

./: CMakeLists.txt  index.html  resources.rc
api/: report.js  status.js  task.js
src/: main.cpp  server.cpp  tunnel.cpp
